fixed the swagger
